# hat-sbs

./: .buildinfo  .gitignore  CNAME  README.rst  c.html  compile_flags.txt  index.html  objects.inv  peru.yaml  pyproject.toml  python.html  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt  sbs.html  search.html  searchindex.js
.doctrees/: c.doctree  environment.pickle  index.doctree  python.doctree  sbs.doctree
.github/workflows/: docs.yaml
_sources/: python.rst.txt  sbs.rst.txt
docs/: conf.py  index.rst  python.rst
playground/: dist.sh  env.sh  gdb-test.gdb  gdb-test.sh  pdoc.sh  python.sh
playground/dockerfiles/: alpine3.20-cpy3.12  build-hat-sbs:3.10-alpine  build-hat-sbs:3.10-debian  build-hat-sbs:3.8-alpine  build-hat-sbs:3.8-debian  build-hat-sbs:3.9-alpine  build-hat-sbs:3.9-debian
playground/dockerfiles/linux/amd64/: build-hat-sbs:debian9-src-cpy3.8  build-hat-sbs:debian9-src-cpy3.9
playground/dockerfiles/linux/arm/v7/: build-hat-sbs:alpine3.17-cpy3.10  build-hat-sbs:alpine3.17-cpy3.11  build-hat-sbs:alpine3.17-cpy3.8  build-hat-sbs:alpine3.17-cpy3.9  (+3 more)
py_api/: index.html  search.js
py_api/hat/: sbs.html
src_c/hat/: sbs.c  sbs.h
src_c/py/_cserializer/: module.c
src_c/py/serializer/: _cserializer.c
src_doit/: __init__.py  cserializer.py  pymodules.py
src_py/hat/sbs/: __init__.py  _pyserializer.py  common.py  evaluator.py  parser.py  repository.py  serializer.py
src_py/hat/sbs/serializer/: __init__.py  common.py  cserializer.py  pyserializer.py
test_pytest/: conftest.py  test_perf.py  test_sbs.py
