[project]
name = "hat-sbs"
version = "0.7.0"
description = "Hat simple binary serializer"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "hat-json ~= 0.5.19",
    "hat-peg ~= 0.5.7",
    "hat-util ~= 0.6.10",
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-sbs.git"
Documentation = "http://hat-sbs.hat-open.com"

[project.optional-dependencies]
dev = [
    "hat-doit ~=0.14.6",
    "peru >= 1.3.1",
]

[build-system]
requires = ["hat-doit ~=0.14.6"]
build-backend = "hat.doit.pep517"

[tool.hat-doit]
pytest_profile_dir = "build/profile"

[tool.pytest.ini_options]
testpaths = ["test_pytest"]
asyncio_mode = "auto"
timeout = 300

[tool.coverage.report]
show_missing = true

[tool.coverage.run]
include = ["src_py/*"]
data_file = "build/.coverage"
